edit @2023 copyright CanCook0

--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PGSQL_PORT = 5432
 PGSQL_DATABASE = ptbt
 
 NEXTAUTH_SECRET = seocranet
-NEXTAUTH_URL = https://cancook.vercel.app
-NEXTAUTH_URL_INTERNAL=https://cancook.vercel.app
+NEXTAUTH_URL = https://cancook.id.vn
+NEXTAUTH_URL_INTERNAL=https://cancook.id.vn
